--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div>
         <p>
           Sorry for the inconvenience. If you want to contact me, you can always <a href="mailto:manogajapathi@gmail.com">mail me</a>, 
-          otherwise we&rsquo;ll be back online shortly!
+          I ll be back online shortly!
         </p>
     </div>
 </article>
