--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Know more about my skills, career and tech talks."
     />
+    <meta name="google-site-verification" content="7J_Yq0ctPn6H1pVymh45jmGeXr8H-Bi3IqxbpS1qGSk" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
